[gd_scene load_steps=6 format=3 uid="uid://bwi4mcvdnq6m7"]

[ext_resource type="Script" path="res://Scenes/World/HUD.gd" id="1_seaan"]
[ext_resource type="Theme" uid="uid://n8d1v8f1no87" path="res://Scenes/UI/theme.tres" id="2_gqlv2"]
[ext_resource type="Texture2D" uid="uid://dgcxg6jlk3qox" path="res://Assets/UI/Botones sin fondo/puntos.png" id="3_485ef"]
[ext_resource type="Texture2D" uid="uid://bu0bcivki2u50" path="res://Assets/UI/frijol.png" id="4_pgqa1"]
[ext_resource type="Texture2D" uid="uid://uuma8s281h3u" path="res://Assets/UI/Botones sin fondo/pausa.png" id="5_tjy3m"]

[node name="UI" type="CanvasLayer" node_paths=PackedStringArray("score_label", "distance_label")]
script = ExtResource("1_seaan")
score_label = NodePath("Control/Roll_panel/GridContainer/ScoreLabel")
distance_label = NodePath("")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Roll_panel" type="PanelContainer" parent="Control"]
layout_mode = 2
offset_left = 964.0
offset_top = 103.0
offset_right = 1118.0
offset_bottom = 153.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_gqlv2")

[node name="GridContainer" type="GridContainer" parent="Control/Roll_panel"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
columns = 2

[node name="ScoreLabel" type="Label" parent="Control/Roll_panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0000
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Control/Roll_panel/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("3_485ef")
expand_mode = 3

[node name="Timer" type="PanelContainer" parent="Control"]
visible = false
offset_left = 195.0
offset_top = 40.0
offset_right = 331.0
offset_bottom = 111.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_gqlv2")

[node name="GridContainer" type="GridContainer" parent="Control/Timer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="TextureRect" type="TextureRect" parent="Control/Timer/GridContainer"]
layout_mode = 2
texture = ExtResource("4_pgqa1")
expand_mode = 3

[node name="Score" type="Label" parent="Control/Timer/GridContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "00:00:00
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pause" type="TextureButton" parent="Control"]
offset_left = 38.0
offset_top = 18.0
offset_right = 141.0
offset_bottom = 119.0
texture_normal = ExtResource("5_tjy3m")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="Control/Pause" to="." method="_on_pause_pressed"]
